Fixed overflowing help texts in smaller screens

--- a/frontend/src/styles/help.scss
+++ b/frontend/src/styles/help.scss
@@ -211,6 +211,10 @@ $hl: #ffeb3b;
     font-size: 32px;
     line-height: 32px;
   }
+
+  &.help-box-wide {
+    max-width: 600px;
+  }
 }
 
 .help-layout {
